# ai-supply-chain-scanner

./: .gitignore  FINDINGS.md  README.md  environment.yml  project.yaml  pyproject.toml  reproduce.sh
blog/: conference_abstract.md  discord_post.md  draft.md  linkedin_post.md  reddit_post.md  substack_intro.md
docs/: ADVERSARIAL_EVALUATION.md  CLAUDE_MD.md  DECISION_LOG.md  HYPOTHESIS_REGISTRY.md  PROJECT_BRIEF.md  PUBLICATION_PIPELINE.md
outputs/: adversarial-ids-ml_scan.json  agent-redteam-framework_scan.json  financial-anomaly-detection_scan.json  pqc-migration-analyzer_scan.json  vuln-prioritization-ml_scan.json
scripts/: check_all_gates.sh  check_integrity.py  check_phase_0.sh  check_phase_1.sh  check_phase_2.sh  check_rubric.py  generate_figures.py  sweep.sh  verify_manifests.py
src/: cli.py
src/core/: risk_categories.py
src/scanners/: dependency_scanner.py  model_scanner.py
tests/: test_basic.py
